api-gateway/1-middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: custom-header
  namespace: apps
spec:
  headers:
    customRequestHeaders:
      X-Custom-Header: "Hello Traefik"

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: waf
  namespace: apps
spec:
  plugin:
    coraza:
      crsEnabled: true
      directives:
        - SecRuleEngine On
        - SecRule REQUEST_URI "@streq /anything/admin" "id:101,phase:1,t:lowercase,log,deny"
        - SecRule REQUEST_METHOD "@streq GET" "id:201,phase:1,log,deny,status:403,msg:'Blocked GET containing /admin',chain"
        - SecRule REQUEST_URI "@rx /admin"
        - Include @owasp_crs/REQUEST-911-METHOD-ENFORCEMENT.conf
        - Include @owasp_crs/REQUEST-932-APPLICATION-ATTACK-RCE.conf
        - Include @owasp_crs/REQUEST-933-APPLICATION-ATTACK-PHP.conf
        - Include @owasp_crs/REQUEST-942-APPLICATION-ATTACK-SQLI.conf
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cache
  namespace: apps
spec:
  plugin:
    httpCache:
      maxTtl: 600
      store:
        memory:
          limit: "3Gi"
