api-gateway/0-gateway-api.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-httpbin-prefix
  namespace: apps
spec:
  stripPrefix:
    prefixes:
      - "/httpbin"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-httproute
  namespace: apps
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: web
    namespace: traefik
  hostnames:
    - gateway.traefik.localhost
    - gateway.traefik.cloud
  rules:
     - matches:
        - path:
            type: PathPrefix
            value: /httpbin/
       backendRefs:
        - name: httpbin-svc
          namespace: apps
          port: 8000
       filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: strip-httpbin-prefix
